--- a/temp.cfg
+++ b/temp.cfg
@@ -1,4 +1,3 @@
-cfgver "1"
 unbindall
 
 alias "+scorenet" "+showscores; net_graphheight 75"
@@ -148,59 +147,6 @@ bind "U AXIS NEG" "xlook"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
-aim_flickstick_circular_deadzone_max "0.94"
-aim_flickstick_circular_deadzone_min "0.6"
-aim_flickstick_crank_sensitivity "1.0"
-aim_flickstick_crank_tightness "0.8"
-aim_flickstick_enabled "0"
-aim_flickstick_flick_snap_mode "5"
-aim_flickstick_flick_tightness "0.6"
-aim_flickstick_forward_deadzone "7.0"
-aim_flickstick_release_dampen_speed "2.0f"
-aim_gyro_acceleration "1"
-aim_gyro_base_sensitivity "1.5"
-aim_gyro_circular_deadzone "0.0"
-aim_gyro_conversion_mode "0"
-aim_gyro_enable_mode "0"
-aim_gyro_high_sense_multiplier "2.0"
-aim_gyro_high_sense_speed "360.0"
-aim_gyro_invert_pitch "0"
-aim_gyro_invert_yaw "0"
-aim_gyro_low_sense_speed "7.5"
-aim_gyro_pitchyaw_ratio "0.5"
-aim_gyro_precision_speed "0.75"
-aim_gyro_raw "0"
-aim_gyro_ray_angle "-45"
-aim_gyro_siapi_convert_pixels_to_angles "25.50"
-aim_gyro_siapi_sensitivity_setting "600"
-aim_gyro_siapi_vertical_scale_setting "100"
-aim_gyro_square_deadzone_pitch "0.0"
-aim_gyro_square_deadzone_yaw "0.0"
-aim_gyro_zoom_dampening_level1 "0.8"
-aim_gyro_zoom_dampening_level2 "0.6"
-aim_stick_circular_deadzone_max "0.90"
-aim_stick_circular_deadzone_min "0.17"
-aim_stick_extra_turning_delay "0.0"
-aim_stick_extra_turning_ramp_up_time "0.6"
-aim_stick_extra_yaw "160.0"
-aim_stick_invert_pitch "0"
-aim_stick_invert_yaw "0"
-aim_stick_rate_pitch "200.0"
-aim_stick_rate_yaw "300.0"
-aim_stick_response_curve "1.6"
-aim_stick_square_deadzone_pitch "0.05"
-aim_stick_square_deadzone_yaw "0.0"
-aim_stick_zoom_dampening_level1 "0.8"
-aim_stick_zoom_dampening_level2 "0.6"
-aim_touchpad_circular_deadzone_min "0.0"
-aim_touchpad_invert_pitch "0"
-aim_touchpad_invert_yaw "0"
-aim_touchpad_sensitivity_pitch "3.5"
-aim_touchpad_sensitivity_yaw "4.0"
-aim_touchpad_square_deadzone_pitch "0.0"
-aim_touchpad_square_deadzone_yaw "0.0"
-aim_touchpad_zoom_dampening_level1 "0.8"
-aim_touchpad_zoom_dampening_level2 "0.6"
 budget_averages_window "30"
 budget_background_alpha "128"
 budget_bargraph_background_alpha "128"
@@ -251,10 +197,6 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_autohelp "0"
 cl_autowepswitch "0"
-cl_bob_lower_amt "5.000000"
-cl_bobamt_lat "0.100000"
-cl_bobamt_vert "0.100000"
-cl_bobcycle "0.98"
 cl_buywheel_donate_key "0"
 cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
@@ -264,33 +206,11 @@ cl_clanid "0"
 cl_cmdrate "64.000000"
 cl_color "1"
 cl_compass_enabled "1"
-cl_crosshair_drawoutline "1"
-cl_crosshair_dynamic_maxdist_splitratio "0.0"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.300000"
-cl_crosshair_dynamic_splitdist "5"
-cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "1.000000"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t "0"
-cl_crosshairalpha "220.000000"
-cl_crosshaircolor "1"
-cl_crosshaircolor_b "50"
-cl_crosshaircolor_g "250"
-cl_crosshaircolor_r "50"
-cl_crosshairdot "0"
-cl_crosshairgap "-2"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "3.500000"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0.500000"
-cl_crosshairusealpha "1"
 cl_debugrumble "0"
-cl_detail_avoid_force "0"
-cl_detail_avoid_radius "0"
-cl_detail_avoid_recover_speed "0"
-cl_detail_max_sway "0"
+cl_detail_avoid_force "0.4"
+cl_detail_avoid_radius "64"
+cl_detail_avoid_recover_speed "0.25"
+cl_detail_max_sway "5"
 cl_disable_round_end_report "0"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
@@ -299,7 +219,6 @@ cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
-cl_fixedcrosshairgap "3"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images ""
@@ -311,8 +230,6 @@ cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
 cl_hud_radar_scale "1.148426"
 cl_idealpitchscale "0.8"
-cl_inventory_radial_immediate_select "1"
-cl_inventory_radial_tap_to_cycle "1"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
 cl_invites_only_friends "0"
@@ -332,7 +249,6 @@ cl_ping_fade_distance "300"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
 cl_promoted_settings_acknowledged "1:1613011264824"
-cl_quickinventory_filename "radial_quickinventory.txt"
 cl_quickinventory_lastinv "1"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "0"
@@ -364,9 +280,8 @@ cl_radial_radio_tab_2_text_5 "#Chatwheel_cheer"
 cl_radial_radio_tab_2_text_6 "#Chatwheel_peptalk"
 cl_radial_radio_tab_2_text_7 "#Chatwheel_sorry"
 cl_radial_radio_tab_2_text_8 "#Chatwheel_sectorclear"
-cl_radial_radio_tap_to_ping "1"
 cl_radial_radio_version_reset "12"
-cl_radialmenu_deadzone_size_joystick "0.17"
+cl_radialmenu_deadzone_size "0.04"
 cl_righthand "1.000000"
 cl_rumblescale "0"
 cl_sanitize_player_names "0"
@@ -388,8 +303,6 @@ cl_timeout "30.000000"
 cl_updaterate "64.000000"
 cl_use_opens_buy_menu "0"
 cl_versus_intro "1"
-cl_viewmodel_shift_left_amt "0.500000"
-cl_viewmodel_shift_right_amt "0.250000"
 closecaption "0"
 closeonbuy "0"
 commentary_firstrun "0"
@@ -401,7 +314,7 @@ demo_index_max_other "500"
 dsp_enhance_stereo "0"
 engine_no_focus_sleep "50"
 force_audio_english "0"
-func_break_max_pieces "0"
+func_break_max_pieces "15"
 g15_update_msec "250"
 gameinstructor_enable "0"
 hud_scaling "0.95"
@@ -476,8 +389,8 @@ m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
 mat_enable_uber_shaders "1"
-mat_monitorgamma "1.6"
-mat_monitorgamma_tv_enabled "1"
+mat_monitorgamma "1.60000"
+mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
 mat_spewalloc "0"
@@ -487,21 +400,8 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "60"
+mm_dedicated_search_maxping "25"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
-move_stick_aggression_strength "60.0"
-move_stick_aggressive "1"
-move_stick_circular_deadzone_max "0.9"
-move_stick_circular_deadzone_min "0.17"
-move_stick_response_curve "1.0"
-move_stick_square_deadzone_forward "0.0"
-move_stick_square_deadzone_strafe "0.25"
-move_stick_walk_zone "0.65"
-move_touchpad_circular_deadzone_min "0.1"
-move_touchpad_sensitivity_forward "1.0"
-move_touchpad_sensitivity_strafe "1.0"
-move_touchpad_square_deadzone_forward "0.2"
-move_touchpad_square_deadzone_strafe "0.2"
 muzzleflash_light "1"
 name "dudushy"
 net_allow_multicast "1"
@@ -526,15 +426,15 @@ option_speed_method "0"
 password "GC4158"
 play_distance "1"
 player_botdifflast_s "0.000000"
-player_competitive_maplist_2v2_10_0_E8C782EC "mg_de_boyard,mg_de_chalice,mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_train,mg_de_shortnuke,mg_de_shortdust,mg_de_lake"
-player_competitive_maplist_8_10_0_C9C8D674 "mg_de_ancient,mg_de_mirage,mg_de_cache"
+player_competitive_maplist_2v2_10_1_8B1DA40F "mg_de_ravine,mg_de_extraction,mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_train,mg_de_shortnuke,mg_de_shortdust,mg_de_lake"
+player_competitive_maplist_8_10_1_62D24D31 "mg_de_mirage,mg_de_overpass,mg_de_train,mg_de_cache"
 player_nevershow_communityservermessage "1"
-player_survival_list_10_0_303 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_vineyard,mg_dz_ember"
+player_survival_list_10_1_13 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_county"
 player_teamplayedlast "3"
-player_wargames_list2_10_0_E04 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_retakes"
+player_wargames_list2_10_1_E04 "mg_skirmish_armsrace,mg_skirmish_demolition,mg_skirmish_flyingscoutsman,mg_skirmish_retakes"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
-r_drawtracers_firstperson "0"
+r_drawtracers_firstperson "1"
 r_eyegloss "0"
 r_eyemove "0"
 r_eyeshift_x "0"
@@ -545,11 +445,15 @@ r_player_visibility_mode "1"
 rate "786432"
 safezonex "1"
 safezoney "1"
+sc_enable "1.0"
+sc_joystick_map "1"
+sc_pitch_sensitivity "1"
+sc_yaw_sensitivity "1.0"
 scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.9"
+sensitivity "1.000000"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_deathcamera_volume "0.000000"
@@ -583,11 +487,6 @@ spec_replay_autostart "0"
 spec_show_xray "1"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
-steaminput_firsttimepopup "0"
-steaminput_glyph_display_mode "0"
-steaminput_glyph_neutral "1"
-steaminput_glyph_solid "1"
-steaminput_glyph_style "1"
 store_version "1"
 suitvolume "0.25"
 sv_forcepreload "1"
@@ -600,7 +499,6 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_clear02_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -624,7 +522,7 @@ ui_deepstats_radio_heat_tab "0"
 ui_deepstats_radio_heat_team "0"
 ui_deepstats_toplevel_mode "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie_CC4ECB9 "anubis"
+ui_mainmenu_bkgnd_movie_53A07E69 "county"
 ui_nearbylobbies_filter3 "cooperative"
 ui_news_last_read_link "https://blog.counter-strike.net/index.php/2021/09/35432/"
 ui_playsettings_custom_preset "mg_de_mirage,mg_de_overpass,mg_de_train,mg_de_cache"
@@ -666,12 +564,6 @@ ui_vanitysetting_loadoutslot_ct "smg3"
 ui_vanitysetting_loadoutslot_t "rifle3"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
-viewmodel_fov "68"
-viewmodel_offset_x "2"
-viewmodel_offset_y "2"
-viewmodel_offset_z "-2.0"
-viewmodel_presetpos "0"
-viewmodel_recoil "1"
 voice_caster_enable "0"
 voice_caster_scale "0.737632"
 voice_enable "1"
@@ -684,7 +576,6 @@ voice_positional "1"
 voice_scale "0.121903"
 voice_system_enable "1"
 voice_threshold "2000"
-volume "1"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
@@ -704,7 +595,7 @@ echo "☆                                                                       
 echo "☆                                                                        ☆"
 echo "☆                                                                        ☆"
 echo "☆                             dudushy_csgo                               ☆"
-echo "☆                                 [v6]                                   ☆"
+echo "☆                                 [v5]                                   ☆"
 echo "☆                        Configuração aplicada!                          ☆"
 echo "☆                              -dudushy-                                 ☆"
 echo "☆                                                                        ☆"
